<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/colorgradient"
        android:minHeight="?attr/actionBarSize"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/Offers"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <ImageButton
                android:id="@+id/imagebutton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/MyNoti"
                android:src="@drawable/noti"
                />
            <ImageButton
                android:id="@+id/imagebutton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/MyCart"
                android:src="@drawable/cart"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</LinearLayout>
